# AIP

./: .gitignore  CMakeLists.txt
AIP/: AIP.cpp  AIP.h  AllCoders.cpp  CMakeLists.txt  allcodersinfo.cpp  allcodersinfo.h  coder.cpp  coder.h  decoder.cpp  decoder.h  input.cpp  input.h  output.cpp  output.h  submenuNavigator.cpp  submenuNavigator.h  test.cpp
